# circuitpython_wifimanager

./: .bumpversion.cfg  .pre-commit-config.yaml  CONTRIBUTING.rst  README.rst  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
circuitpython_wifimanager/: __init__.py
