[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "circuitpython_wifimanager"
version = "0.0.0"
description = "Helper library for microcontrollers with builtin WiFi, such as the ESP32-S2."
readme = "README.rst"
requires-python = ">=3.4"
keywords = [ "circuitpython", "esp32", "wifi",]
dynamic = [ "classifiers", "dependencies",]

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/circuitpython_wifimanager"
"Issue Tracker" = "https://github.com/domdfcoding/circuitpython_wifimanager/issues"
"Source Code" = "https://github.com/domdfcoding/circuitpython_wifimanager"

[tool.whey]
base-classifiers = []
python-versions = [ "3.8",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"

[tool.importcheck]

[tool.mypy]
python_version = "3.8"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.dep_checker]
allowed_unused = [ "adafruit_blinka",]

[tool.dep_checker.name_mapping]
adafruit_circuitpython_requests = "adafruit_requests"

[tool.dependency-dash."requirements.txt"]
order = 10

[tool.dependency-dash."doc-source/requirements.txt"]
order = 30
include = false

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]
